--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,17 @@
   <meta charset="utf-8">
   <title>BELICIOUS | PLAIN COOKING</title>
   <base href="/">
+  <meta http-equiv="cache-control" content="no-cache, must-revalidate, post-check=0, pre-check=0">
+  <meta http-equiv="expires" content="0">
+  <meta http-equiv="pragma" content="no-cache">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Delicious foods | Home Foods | Plain Cooking | Luscious Food | Home Nutrition">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
 <app-root></app-root>
+<script>
+  document.addEventListener('contextmenu', event => event.preventDefault());
+</script>
 </body>
 </html>
