--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
   <meta http-equiv="expires" content="0">
   <meta http-equiv="pragma" content="no-cache">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="belicious" content="beliciousbd, belicious"/>
+  <meta name="beliciousdb" content="belicious bd, Tasty Food, Food stuff"/>
   <meta name="description" content="Delicious foods | Home Foods | Plain Cooking | Luscious Food | Home Nutrition">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
